# esi-leap

./: .containerignore  .coveragerc  .gitignore  .pre-commit-config.yaml  .stestr.conf  .travis.yml  Containerfile  README.md  partA.sh  partC.sh  pytest.ini  requirements.txt  run_services.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build-image.yaml  precommit.yaml  tests.yml  unit-tests.yaml
ci/: pycodestyle_tests.sh  pylint_tests.sh
docs/: esi-leap-api-ref.md  esi-leap-api-version-history.md  esi-leap-policy.md  esi-leap-reporting.md  esi-leap-requirements.md
esi_leap/: send_email_notification.py  version.py
esi_leap/api/: app.py  service.py  wsgi.py
esi_leap/api/controllers/: base.py  root.py  types.py  version.py
esi_leap/cmd/: api.py  dbsync.py  manager.py  serialconsoleproxy.py
esi_leap/common/: constants.py  exception.py  flocx_market.py  health.py  i18n.py  idp.py  ironic.py  keystone.py  notification_utils.py  policy.py  rpc.py  service.py  statuses.py  utils.py
esi_leap/common/idp/: __init__.py  baseIDP.py  dummyIDP.py  keystoneIDP.py
esi_leap/common/idp_clients/: baseIDP.py  dummyIDP.py  keystoneIDP.py
esi_leap/conf/: __init__.py  api.py  dummy_node.py  esi.py  flocx_market.py  ironic.py  keystone.py  netconf.py  notification.py  opts.py  pecan.py  serialconsoleproxy.py
esi_leap/console/: __init__.py  websocketproxy.py
esi_leap/db/: api.py  base.py  migration.py
esi_leap/db/sqlalchemy/: alembic.ini  api.py  migration.py  models.py
esi_leap/integration_tests/: test_container_image.py
esi_leap/manager/: rpcapi.py  service.py  utils.py
esi_leap/objects/: __init__.py  base.py  console_auth_token.py  contract.py  event.py  fields.py  flocx_market_client.py  leasable_resource.py  lease.py  lease_request.py  notification.py  offer.py  owner_change.py  policy.py  policy_node.py  resource_object.py
esi_leap/resource_objects/: __init__.py  base.py  dummy_node.py  error.py  fake_node.py  ironic_node.py  resource_object_factory.py  test_node.py
esi_leap/templates/: lease_create_email.txt  lease_expire_email.txt
esi_leap/tests/: base.py
esi_leap/tests/api/: base.py
esi_leap/tests/common/: test_health.py  test_idp.py  test_ironic.py  test_keystone.py  test_notification_utils.py  test_policy.py  test_rpc.py  test_utils.py
esi_leap/tests/manager/: test_service.py
esi_leap/tests/objects/: test_console_auth_token.py  (+10 more)
etc/esi-leap/: esi-leap-config-generator.conf  esi-leap-policy-generator.conf
flocx_provider/: requirements.txt
flocx_provider/api/: app.py  config.py  hooks.py
flocx_provider/cmd/: api.py
flocx_provider/db/: api.py  models.py
(+35 files in other folders)
