[metadata]
name = esi-leap
summary = ESI provider
description-file =
    README.md

[files]
packages =
    esi_leap

[entry_points]
oslo.config.opts =
    esi-leap.conf = esi_leap.conf.opts:list_opts

oslo.policy.enforcer =
    esi-leap = esi_leap.common.policy:get_enforcer

oslo.policy.policies =
    esi-leap = esi_leap.common.policy:list_rules

console_scripts =
    esi-leap-api = esi_leap.cmd.api:main
    esi-leap-dbsync = esi_leap.cmd.dbsync:main
    esi-leap-manager = esi_leap.cmd.manager:main

wsgi_scripts =
    esi-leap-wsgi-api = esi_leap.api.wsgi:init

esi_leap.database.migration_backend =
    sqlalchemy = esi_leap.db.sqlalchemy.migration
