[metadata]
name = esi-leap
summary = ESI provider
description-file =
    README.md
license = Apache License, Version 2.0
author = ESI
author-email = esi@lists.massopen.cloud
python-requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    esi_leap

[entry_points]
oslo.config.opts =
    esi-leap.conf = esi_leap.conf.opts:list_opts

oslo.policy.enforcer =
    esi-leap = esi_leap.common.policy:get_enforcer

oslo.policy.policies =
    esi-leap = esi_leap.common.policy:list_rules

console_scripts =
    esi-leap-api = esi_leap.cmd.api:main
    esi-leap-dbsync = esi_leap.cmd.dbsync:main
    esi-leap-manager = esi_leap.cmd.manager:main

wsgi_scripts =
    esi-leap-wsgi-api = esi_leap.api.wsgi:init

esi_leap.database.migration_backend =
    sqlalchemy = esi_leap.db.sqlalchemy.migration
